--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&family=Shadows+Into+Light&display=swap');
+
 /* General Reset */
 * {
     margin: 0;
@@ -7,7 +9,7 @@
 
 /* Body Styling */
 body {
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: "Delius Swash Caps", cursive;
     line-height: 1.6;
     /* background-color: #f9f9f9; */
     color: #333;
@@ -48,12 +50,11 @@ table {
 
 th {
     padding: 10px;
-    text-align: left;
     background-color: #eee;
 }
 
 td {
-    padding: 24px;
+    padding: 23px;
     text-align: left;
     border: 1px solid #ddd;
 }
@@ -66,7 +67,10 @@ td {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    font-weight: bold;
+    font-family: "Delius Swash Caps", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: x-large;
 }
 
 .right-arrow {
